hard-gists/51686/run.log
=== Docker Run Log for 51686 ===
Started at: Mi 29. Okt 15:24:23 CET 2025

[2025-10-29 15:24:24] START: Running container for 51686
[2025-10-29 15:24:24] SUCCESS: Container 1fc9f615be806990a7dcd6a981f377ceca67d5e0032cc8d8bf42dd7a11c893bd started for 51686
=== Container logs for 51686 ===
  File "/snippet.py", line 57
    print "Running %s" % str(self)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 51686 ===
[2025-10-29 15:24:26] INFO: Container 1fc9f615be806990a7dcd6a981f377ceca67d5e0032cc8d8bf42dd7a11c893bd has stopped
